# OS

./: .gitignore  Cargo.toml  bootable.iso  justfile  rust-toolchain.toml
bootable-img-builder/src/: main.rs
bootable-iso-builder/: Cargo.toml
bootable-iso-builder/src/: main.rs
doc/: useful.txt  virtual_memory_layout.txt
kernel/: Cargo.toml
kernel/src/: acpi.rs  com_ports.rs  gdt.rs  interrupts.rs  main.rs  memory_management.rs  serial_debug_printer.rs  serial_printer.rs  timers.rs
kernel/src/acpi/: mod.rs
kernel/src/com_ports/: mod.rs
kernel/src/gdt/: mod.rs
kernel/src/interrupts/: apic.rs  idt.rs  mod.rs  pic.rs  pit.rs
kernel/src/interrupts/apic/: ioapic.rs  mod.rs  timer.rs
kernel/src/memory_management/: dlmalloc_allocator.rs  general_purpose_allocator.rs  mod.rs  physical_memory_manager.rs  slab_allocator.rs  virtual_memory_manager.rs
kernel/src/serial_debug/: mod.rs  serial_debug_printer.rs  serial_logger.rs  serial_printer.rs
kernel/src/timers/: hpet.rs  pit.rs
