[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11.7"
x86_64 = { version =  "0.15.1", features = ["abi_x86_interrupt"] }
volatile = "0.6.1"
spin = "0.9.8"
uart_16550 = "0.3.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4.22"
pic8259 = "0.11.0"
